fix: adding align prop

--- a/packages/components/bolt-share/src/share.scss
+++ b/packages/components/bolt-share/src/share.scss
@@ -42,8 +42,7 @@ $bolt-share-opacity: 100, 80, 60, 40, 20;
 }
 
 .c-bolt-share__link {
-  @include bolt-margin-right(-0.25rem);
-
+  display: block;
   color: bolt-theme(link);
   text-decoration: none;
   white-space: nowrap;
